--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,6 @@
 ---
-import Welcome from "../components/Welcome.astro";
-import Layout from "../layouts/Layout.astro";
+// Redirect to dashboard as the main application interface
+// eslint-disable-next-line prettier/prettier
 ---
 
-<Layout>
-  <Welcome />
-</Layout>
+<meta http-equiv="refresh" content="0; url=/dashboard" />
