--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import { Toaster } from "../components/ui/sonner";
 
 interface Props {
   // eslint-disable-next-line prettier/prettier
@@ -44,6 +45,9 @@ const { title = "JobHop - Dashboard" } = Astro.props;
     <main class="min-h-screen bg-gray-50">
       <slot />
     </main>
+
+    <!-- Toast Notifications -->
+    <Toaster client:load />
   </body>
 </html>
 
