Fix some build errors

--- a/src/pages/auth/reset-password.astro
+++ b/src/pages/auth/reset-password.astro
@@ -1,6 +1,6 @@
 ---
 import MainLayout from "../../layouts/MainLayout.astro";
-import ResetPasswordForm from "../../components/auth/ResetPasswordForm.tsx";
+import { ResetPasswordForm } from "../../components/auth/ResetPasswordForm.tsx";
 import { FeedbackToaster } from "../../components/ui/FeedbackMessage";
 
 export const prerender = false; // Enable SSR for auth pages
