--- a/src/pages/auth/forgot-password.astro
+++ b/src/pages/auth/forgot-password.astro
@@ -1,6 +1,6 @@
 ---
 import MainLayout from "../../layouts/MainLayout.astro";
-import ForgotPasswordForm from "../../components/auth/ForgotPasswordForm.tsx";
+import { ForgotPasswordForm } from "../../components/auth/ForgotPasswordForm.tsx";
 import { FeedbackToaster } from "../../components/ui/FeedbackMessage";
 
 export const prerender = false; // Enable SSR for auth pages
